test_cases/pass/p30.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT r
r=10%3
PRINT: r
END SCRIPT
