test_cases/fail/f21.lxr
SCRIPT AREA
START SCRIPT
DECLARE CHAR c
c='ab'
END SCRIPT
